# dxt-explorer

./: .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config_cori_perlmutter.sh  dxt-explorer  explore.py  install-r-libraries.R  plot-spatiality.R  plot-transfer.R  plot.R  prepare.sh  requirements.txt  sample.json  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: darshan-3.4.2.yml  darshan-3.4.4.yml  darshan-3.4.6.yml  darshan-3.4.7.yml  explorer-python-3.10-darshan-3.4.0.yml  explorer-python-3.10-darshan-3.4.1.yml  explorer-python-3.10-darshan-3.4.2.yml  explorer-python-3.11-darshan-3.4.0.yml  explorer-python-3.11-darshan-3.4.1.yml  explorer-python-3.11-darshan-3.4.2.yml  explorer-python-3.12-darshan-3.4.3.yaml  explorer-python-3.12-darshan-3.4.4.yaml  explorer-python-3.12-darshan-3.4.5.yaml  explorer-python-3.12-darshan-3.4.6.yaml  explorer-python-3.12-darshan-3.4.7.yaml  explorer-python-3.8 -darshan-3.4.0.yml  explorer-python-3.8 -darshan-3.4.1.yml  explorer-python-3.8-darshan-3.4.0.yml  explorer-python-3.8-darshan-3.4.1.yml  explorer-python-3.8-darshan-3.4.2.yml  explorer-python-3.9-darshan-3.4.0.yml  explorer-python-3.9.yml  (+6 more)
docs/: requirements.txt
explore/: dxt.py
explorer/: dependencies.R  dxt.py  insights.py  version.py
plots/: operation.R  overview.R  spatiality.R  transfer.R
sample/: jeanbez_8_benchmark_parallel_id45195555_8-6-50011-11681279140261054765_1628283217.darshan  sample.darshan
tests/: test_all_plots.py  test_list.py  test_operation_plot.py  test_spatiality_plot.py  test_transfer_plot.py
(+33 files in other folders)
