[metadata]
name = dxt-explorer
description = DXT Explorer is an interactive web-based log analysis tool to visualize Darshan DXT logs and help understand the I/O behavior.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/hpc-io/dxt-explorer
keywords = dxt-explorer
version = 1.2
author = Jean Luca Bez Suren Byna
author_email = jlbez@lbl.gov sbyna@lbl.gov
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
install_requires =
    argparse
    pandas
    alive-progress
python_requires = >= 3.6

[options.package_data]
explore = 
    explore/plots/operation.R
    explore/plots/transfer.R
    explore/plots/spatiality.R

[options.entry_points]
console_scripts = 
    dxt-explorer = explore.dxt:main
